feat: IntÃ©gration Stripe Checkout avec redirection vers abonnements Pro et Premium - Ajout route API checkout avec gestion des plans (pro/premium) - CrÃ©ation pages success et cancel - AmÃ©lioration gestion d'erreurs avec messages clairs - Ajout effets de surbrillance sur boutons d'abonnement - Mise Ã  jour env.example avec variables Stripe

--- a/env.example
+++ b/env.example
@@ -11,8 +11,15 @@ SUPABASE_SERVICE_ROLE_KEY=votre_cle_service_role_ici
 STRIPE_SECRET_KEY=sk_test_votre_cle_secrete_ici
 STRIPE_WEBHOOK_SECRET=whsec_votre_webhook_secret_ici
 
+# Stripe Price IDs (récupérez-les dans Stripe Dashboard > Products)
+# Créez deux produits dans Stripe: "Comptalyze Pro" et "Comptalyze Premium"
+# Copiez leurs Price IDs (ex: price_1Qd8xwNXXXXXXX)
+STRIPE_PRICE_PRO=price_XXXXXXXXXXXX
+STRIPE_PRICE_PREMIUM=price_YYYYYYYYYYYY
+
 # URL de l'application (pour les redirections)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=https://comptalyze.com
 
 
 
