Restructuration complÃ¨te du dashboard et transformation du chatbot en assistant IA flottant
- CrÃ©ation d'un layout dashboard professionnel avec sidebar et navigation
- Nouveau systÃ¨me de routes: /dashboard, /dashboard/simulateur, /dashboard/factures, /dashboard/statistiques, /dashboard/compte
- Ajout de composants rÃ©utilisables: Card, Breadcrumbs
- Transformation du chatbot en assistant IA flottant (FloatingAIAssistant)
- Design moderne avec thÃ¨me sombre et gradient de marque (#00D084 â†’ #2E6CF6)
- Navigation responsive avec sidebar collapsible sur mobile
- IcÃ´nes Lucide React pour toutes les sections
- Breadcrumbs et titres de page sur toutes les routes
- AmÃ©lioration de l'expÃ©rience utilisateur avec interface type SaaS (Stripe/Notion/Linear)

--- a/env.example
+++ b/env.example
@@ -21,5 +21,23 @@ STRIPE_PRICE_PREMIUM=price_YYYYYYYYYYYY
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_BASE_URL=https://comptalyze.com
 
+# Stripe Price IDs (pour la détection des plans)
+# Utilisés par lib/plan.ts pour déterminer Pro vs Premium
+NEXT_PUBLIC_STRIPE_PRICE_PRO=price_XXXXXXXXXXXX
+NEXT_PUBLIC_STRIPE_PRICE_PREMIUM=price_YYYYYYYYYYYY
+
+# Email (Resend)
+# Créez un compte sur https://resend.com et récupérez votre API key
+RESEND_API_KEY=re_XXXXXXXXXXXX
+COMPANY_FROM_EMAIL="Comptalyze <no-reply@comptalyze.com>"
+
+# CRON Secret (pour sécuriser les appels cron)
+# Génèrez une chaîne aléatoire longue (ex: openssl rand -hex 32)
+CRON_SECRET=your-long-random-secret-here
+
+# AI (OpenAI)
+# Créez un compte sur https://platform.openai.com et récupérez votre API key
+OPENAI_API_KEY=sk-XXXXXXXXXXXX
+
 
 
