--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "date-fns-tz": "^3.2.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
+    "openai": "^6.7.0",
+    "pdfkit": "^0.17.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.3.0",
+    "resend": "^6.4.0",
     "stripe": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
