--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "classnames": "^2.5.1",
     "date-fns-tz": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "openai": "^6.7.0",
