--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
+    "blob-stream": "^0.1.3",
     "classnames": "^2.5.1",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.23.24",
