--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "canvas": "^3.2.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
