--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "check-env": "node scripts/check-env.js"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "@supabase/supabase-js": "^2.78.0",
     "blob-stream": "^0.1.3",
     "classnames": "^2.5.1",
