--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 NEXT_PRIVATE_TURBOPACK=false next build",
     "start": "next start",
     "lint": "eslint",
     "check-env": "node scripts/check-env.js",
