Ajout guide post-validation domaine Resend + mise Ã  jour env.example
- Guide complet des Ã©tapes aprÃ¨s validation du domaine
- Configuration COMPANY_FROM_EMAIL ajoutÃ©e Ã  env.example
- Instructions dÃ©taillÃ©es pour local et production
- Checklist de vÃ©rification et troubleshooting

--- a/env.example
+++ b/env.example
@@ -21,6 +21,7 @@ OPENAI_API_KEY=sk-...
 
 # Resend (pour les emails)
 RESEND_API_KEY=re_...
+COMPANY_FROM_EMAIL="Comptalyze <no-reply@comptalyze.com>"
 
 # reCAPTCHA
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6Le...
