--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/check-trials",
       "schedule": "0 2 * * *"
+    },
+    {
+      "path": "/api/cron/send-upgrade-emails",
+      "schedule": "0 10 * * *"
     }
   ]
 }
