Fix: Cron combinÃ© daily-tasks pour respecter limite Vercel gratuite
- Combinaison de check-trials + send-upgrade-emails en 1 seul cron
- Fichier daily-tasks exÃ©cute 2 tÃ¢ches quotidiennes Ã  10h
- Suppression de send-upgrade-emails (maintenant dans daily-tasks)
- Mise Ã  jour vercel.json : 2 crons au lieu de 3
- Respect de la limite Vercel gratuite (2 crons max)
- Guide mis Ã  jour avec nouvelle architecture
- Email marketing J+3 avec code LAUNCH5 opÃ©rationnel

--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,7 @@
       "schedule": "0 0 2 * *"
     },
     {
-      "path": "/api/cron/check-trials",
-      "schedule": "0 2 * * *"
-    },
-    {
-      "path": "/api/cron/send-upgrade-emails",
+      "path": "/api/cron/daily-tasks",
       "schedule": "0 10 * * *"
     }
   ]
