--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/sync-integrations",
       "schedule": "0 2 * * *"
+    },
+    {
+      "path": "/api/cron/monthly-sync",
+      "schedule": "0 23 28-31 * *"
     }
   ]
 }
