Audit de production complet - Infrastructure PROD-ready + Documentation 130 pages

--- a/env.example
+++ b/env.example
@@ -1,37 +1,137 @@
-# Supabase
+# ==============================================================================
+# COMPTALYZE - Configuration des variables d'environnement
+# ==============================================================================
+# 
+# Ce fichier liste TOUTES les variables nécessaires pour faire tourner Comptalyze.
+# Copiez ce fichier en ".env.local" pour le développement local.
+#
+# ⚠️ NE JAMAIS committer de vraies valeurs dans ce fichier !
+#
+# ==============================================================================
+
+# ------------------------------------------------------------------------------
+# SUPABASE (Base de données + Auth)
+# ------------------------------------------------------------------------------
+# URL de votre projet Supabase (trouvable dans Settings > API)
 NEXT_PUBLIC_SUPABASE_URL=https://votre-projet.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=votre_cle_anon_key
 
-# Supabase Service Role (pour les webhooks et l'admin)
-SUPABASE_SERVICE_ROLE_KEY=votre_service_role_key
+# Clé anonyme publique (safe pour le client)
+NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_...
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+# ⚠️ Service Role Key - NE JAMAIS exposer côté client !
+# Utilisée pour les webhooks, l'admin, et les opérations serveur
+SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# Stripe Price IDs
-STRIPE_PRICE_PRO=price_...
-STRIPE_PRICE_PREMIUM=price_...
-STRIPE_PRICE_PRO_YEARLY=price_...
-STRIPE_PRICE_PREMIUM_YEARLY=price_...
+# ------------------------------------------------------------------------------
+# STRIPE (Paiements & Abonnements)
+# ------------------------------------------------------------------------------
+# Clés API Stripe (Dashboard > Developers > API keys)
+# En dev, utilisez les clés de test (pk_test_xxx / sk_test_xxx)
+STRIPE_SECRET_KEY=sk_test_51xxxxx
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_51xxxxx
 
-# OpenAI
-OPENAI_API_KEY=sk-...
+# Secret de signature des webhooks (Dashboard > Developers > Webhooks)
+# Permet de vérifier l'authenticité des événements Stripe
+STRIPE_WEBHOOK_SECRET=whsec_xxxxx
 
-# Resend (pour les emails)
-RESEND_API_KEY=re_...
+# Price IDs - Créés dans Stripe Dashboard > Products
+# Ces IDs lient les boutons de paiement aux produits Stripe
+STRIPE_PRICE_PRO=price_xxxxx_pro_monthly
+STRIPE_PRICE_PREMIUM=price_xxxxx_premium_monthly
+STRIPE_PRICE_PRO_YEARLY=price_xxxxx_pro_yearly
+STRIPE_PRICE_PREMIUM_YEARLY=price_xxxxx_premium_yearly
+
+# Optionnel : Price IDs publics (pour référence frontend)
+NEXT_PUBLIC_STRIPE_PRICE_PRO=price_xxxxx_pro_monthly
+NEXT_PUBLIC_STRIPE_PRICE_PREMIUM=price_xxxxx_premium_monthly
+NEXT_PUBLIC_STRIPE_PRICE_PRO_YEARLY=price_xxxxx_pro_yearly
+NEXT_PUBLIC_STRIPE_PRICE_PREMIUM_YEARLY=price_xxxxx_premium_yearly
+
+# ------------------------------------------------------------------------------
+# OPENAI (IA - ComptaBot & Conseils)
+# ------------------------------------------------------------------------------
+# Clé API OpenAI (https://platform.openai.com/api-keys)
+# Nécessaire pour les fonctionnalités IA Premium
+OPENAI_API_KEY=sk-proj-xxxxx
+
+# ------------------------------------------------------------------------------
+# RESEND (Emails transactionnels)
+# ------------------------------------------------------------------------------
+# Clé API Resend (https://resend.com/api-keys)
+# Pour l'envoi d'emails : bienvenue, rappels, récaps mensuels, etc.
+RESEND_API_KEY=re_xxxxx
+
+# Adresse email d'envoi (doit être vérifiée dans Resend)
 COMPANY_FROM_EMAIL="Comptalyze <no-reply@comptalyze.com>"
 
-# reCAPTCHA
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6Le...
-RECAPTCHA_SECRET_KEY=6Le...
+# ------------------------------------------------------------------------------
+# RECAPTCHA (Protection anti-spam)
+# ------------------------------------------------------------------------------
+# Google reCAPTCHA v2 (https://www.google.com/recaptcha/admin)
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+RECAPTCHA_SECRET_KEY=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
-# Base URL
-NEXT_PUBLIC_BASE_URL=https://comptalyze.com
-# En développement local : http://localhost:3000
+# ------------------------------------------------------------------------------
+# APPLICATION
+# ------------------------------------------------------------------------------
+# URL de base de l'application (sans trailing slash)
+# Dev : http://localhost:3000
+# Prod : https://comptalyze.com
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Umami Analytics (Optionnel - pour le suivi EU-friendly)
+# Version de l'app (optionnel - pour le endpoint /api/health)
+npm_package_version=0.1.0
+
+# ------------------------------------------------------------------------------
+# CRON & JOBS
+# ------------------------------------------------------------------------------
+# Secret pour sécuriser les appels CRON (générez un UUID aléatoire)
+# Utilisé pour authentifier les tâches planifiées (Vercel Cron, etc.)
+CRON_SECRET=votre-secret-cron-unique-et-aleatoire
+
+# ------------------------------------------------------------------------------
+# ANALYTICS (Optionnel)
+# ------------------------------------------------------------------------------
+# Google Analytics 4
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Umami Analytics (Alternative EU-friendly)
 NEXT_PUBLIC_UMAMI_WEBSITE_ID=votre-website-id
 NEXT_PUBLIC_UMAMI_SRC=https://cloud.umami.is/script.js
 # Ou pour auto-hébergement : https://votre-instance-umami.com/script.js
+
+# ------------------------------------------------------------------------------
+# ADMIN & DEBUG
+# ------------------------------------------------------------------------------
+# Active les outils d'administration (routes /api/admin/*)
+# En production, mettre à "false" si non nécessaire
+ADMIN_TOOLS_ENABLED=true
+
+# Niveau de log (debug, info, warn, error)
+LOG_LEVEL=info
+
+# ------------------------------------------------------------------------------
+# SÉCURITÉ
+# ------------------------------------------------------------------------------
+# Clé de chiffrement pour les tokens d'intégration (Shopify/Stripe Connect)
+# Doit être une chaîne de 32 caractères minimum
+ENCRYPTION_KEY=votre-cle-de-chiffrement-32-caracteres-minimum
+
+# ------------------------------------------------------------------------------
+# NOTES & CHECKLIST
+# ------------------------------------------------------------------------------
+#
+# ✅ Avant de déployer en production, vérifiez que :
+#
+# 1. Toutes les variables marquées ⚠️ sont bien définies
+# 2. Les clés Stripe sont en mode LIVE (sk_live_xxx / pk_live_xxx)
+# 3. Le STRIPE_WEBHOOK_SECRET correspond bien au webhook de production
+# 4. NEXT_PUBLIC_BASE_URL pointe vers votre domaine de production
+# 5. ADMIN_TOOLS_ENABLED est à "false" si non utilisé
+# 6. CRON_SECRET est unique et sécurisé
+# 7. ENCRYPTION_KEY est long et aléatoire
+# 8. Les DNS sont configurés pour RESEND (SPF, DKIM, DMARC)
+# 9. reCAPTCHA est configuré pour votre domaine de prod
+# 10. Les webhooks Stripe sont configurés et testés
+#
+# ==============================================================================
