--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,61 @@
 {
   "crons": [
     {
-      "path": "/api/cron/sync-integrations",
-      "schedule": "0 2 * * *"
+      "path": "/api/cron/check-trials",
+      "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/check-thresholds",
+      "schedule": "0 10 * * *"
+    },
+    {
+      "path": "/api/cron/send-reminders",
+      "schedule": "0 8 * * 1"
+    },
+    {
+      "path": "/api/cron/daily-tasks",
+      "schedule": "0 6 * * *"
     },
     {
       "path": "/api/cron/monthly-sync",
-      "schedule": "0 23 28-31 * *"
+      "schedule": "0 2 1 * *"
+    },
+    {
+      "path": "/api/cron/sync-integrations",
+      "schedule": "0 3 1 * *"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/api/sitemap"
+    },
+    {
+      "source": "/robots.txt",
+      "destination": "/api/robots"
     }
   ]
 }
