fix: Corrections critiques - CSP Supabase, gestion erreurs connexion, logique plans Premium
- Fix Content Security Policy pour autoriser Supabase et Google Analytics
- AmÃ©lioration gestion erreurs connexion (messages FR, dÃ©tection Failed to fetch)
- Correction badge essai gratuit sur comptes Premium payants et manuels
- Correction warnings React key props dans les listes
- Ajout script diagnostic check-connection
- Documentation complÃ¨te des corrections

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "check-env": "node scripts/check-env.js",
+    "check-connection": "node scripts/check-connection.js",
     "check-demo": "node scripts/check-demo-deps.mjs",
     "demo:record": "node scripts/render-preview.mjs",
     "demo:optimize": "node scripts/optimize-gif.mjs",
