Fix: Configuration Vercel pour les fichiers de polices PDFKit
- Ajout de includeFiles dans vercel.json pour inclure les polices PDFKit
- Simplification de la configuration webpack
- RÃ©sout le problÃ¨me ENOENT sur Vercel en production

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,11 @@
       "schedule": "0 2 1 * *"
     }
   ],
+  "functions": {
+    "app/api/**/*": {
+      "includeFiles": "node_modules/pdfkit/js/data/**"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
