--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev",
+    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=8192 NEXT_PRIVATE_TURBOPACK=false next dev",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 NEXT_PRIVATE_TURBOPACK=false next build",
     "start": "next start",
     "lint": "eslint",
@@ -29,7 +29,6 @@
     "@stripe/react-stripe-js": "^5.3.0",
     "@stripe/stripe-js": "^8.3.0",
     "@supabase/supabase-js": "^2.78.0",
-    "blob-stream": "^0.1.3",
     "classnames": "^2.5.1",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.23.24",
@@ -37,7 +36,7 @@
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "openai": "^6.7.0",
-    "pdfkit": "^0.17.2",
+    "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.3.0",
@@ -50,12 +49,13 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "canvas": "^3.2.0",
+    "copy-webpack-plugin": "^13.0.1",
     "cross-env": "^10.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "mime-types": "^2.1.35",
