feat: custom email verification flow

--- a/env.example
+++ b/env.example
@@ -63,6 +63,8 @@ RESEND_API_KEY=re_xxxxx
 
 # Adresse email d'envoi (doit être vérifiée dans Resend)
 COMPANY_FROM_EMAIL="Comptalyze <no-reply@comptalyze.com>"
+# Adresse email spécifique pour la vérification (optionnel - fallback vers onboarding@resend.dev)
+EMAIL_VERIFICATION_FROM="Comptalyze <onboarding@resend.dev>"
 
 # ------------------------------------------------------------------------------
 # RECAPTCHA (Protection anti-spam)
