--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "crons": [
     {
-      "path": "/api/cron/send-reminders",
-      "schedule": "0 7 2 * *"
+      "path": "/api/cron/daily-orchestrator",
+      "schedule": "0 */6 * * *"
     },
     {
-      "path": "/api/cron/daily-tasks",
-      "schedule": "0 9 * * *"
+      "path": "/api/cron/monthly-orchestrator",
+      "schedule": "0 7 * * *"
     }
   ],
   "functions": {
