--- a/env.example
+++ b/env.example
@@ -103,9 +103,11 @@ NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
 
 # Google Ads Conversion Tracking
-# Trouvable dans Google Ads > Tools > Conversions > Votre conversion > Tag setup
-NEXT_PUBLIC_GOOGLE_ADS_CONV_ID=AW-XXXXXXXXXX
-NEXT_PUBLIC_GOOGLE_ADS_CONV_LABEL=XXXXXXXXXXX
+# Conversion ID : 17719086824 (utiliser AW-17719086824)
+# Conversion Label : fpC9CPjV_74bEOidj4FC
+# Conversion Name : Achat_Comptalyze
+NEXT_PUBLIC_GOOGLE_ADS_CONV_ID=AW-17719086824
+NEXT_PUBLIC_GOOGLE_ADS_CONV_LABEL=fpC9CPjV_74bEOidj4FC
 
 # Meta Pixel (Facebook)
 NEXT_PUBLIC_META_PIXEL_ID=1234567890123456
